--- a/docs/md/design-code/设计模式原则.md
+++ b/docs/md/design-code/设计模式原则.md
@@ -2,7 +2,7 @@
 
 ### 设计模式分类
 
-![image-20220311092049196](/Users/liguoyu/Library/Application Support/typora-user-images/image-20220311092049196.png)
+![image-20220311092049196](/Users/liguoyu/Desktop/Blogs/Summarize/docs/assets/img/image-20220311092049196.png)
 
 #### 单一模式原则
 
